force-app/main/default/objects/UserStory__c/UserStory__c.object-meta.xml
<CustomObject>
    <label>User Story</label>
    <nameField>
        <label>Título</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>