force-app/main/default/objects/UserStory__c/fields/Ata_de_Reuniao__c.field-meta.xml
<CustomField>
    <fullName>Ata_de_Reuniao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ata de Reunião</label>
    <referenceTo>MeetingMinutes__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>