force-app/main/default/objects/UserStory__c/fields/Beneficio__c.field-meta.xml
<CustomField>
    <fullName>Beneficio__c</fullName>
    <label>Benefício</label>
    <type>TextArea</type>
</CustomField>