force-app/main/default/objects/UserStory__c/fields/Criterios_Gherkin__c.field-meta.xml
<CustomField>
    <fullName>Criterios_Gherkin__c</fullName>
    <label>Critérios Gherkin</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>