force-app/main/default/objects/UserStory__c/fields/Funcionalidade__c.field-meta.xml
<CustomField>
    <fullName>Funcionalidade__c</fullName>
    <label>Funcionalidade</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>