force-app/main/default/objects/UserStory__c/fields/Perfil__c.field-meta.xml
<CustomField>
    <fullName>Perfil__c</fullName>
    <label>Perfil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>