force-app/main/default/objects/UserStory__c/fields/Reuniao__c.field-meta.xml
<CustomField>
    <fullName>Reuniao__c</fullName>
    <label>Reunião</label>
    <length>255</length>
    <type>Text</type>
</CustomField>